--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+jspm_packages
 
 .idea
 app/**/*.js
