--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/core": "^2.0.0-rc.1",
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "bootstrap-sass": "^3.3.6",
     "es6-shim": "0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
@@ -26,5 +27,15 @@
     "concurrently": "2.0.0",
     "lite-server": "2.2.0",
     "typescript": "1.8.10"
+  },
+  "jspm": {
+    "dependencies": {
+      "scss": "github:KevCJones/plugin-scss@^0.2.11"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
