--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": " ./node_modules/.bin/typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "build.prod": "gulp build.prod --color",
+    "start": "gulp serve.dev --color"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,11 +24,39 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "browser-sync": "^2.13.0",
+    "chalk": "^1.1.3",
     "concurrently": "2.0.0",
+    "express": "~4.13.1",
+    "express-history-api-fallback": "^2.0.0",
     "gulp": "^3.9.1",
-    "lite-server": "2.2.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-inject": "^4.0.0",
+    "gulp-inline-ng2-template": "^1.1.2",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-plumber": "~1.1.0",
+    "gulp-postcss": "^6.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-shell": "~0.5.2",
+    "gulp-sourcemaps": "2.0.0-alpha",
+    "gulp-template": "^4.0.0",
+    "gulp-tslint": "^4.3.3",
+    "gulp-typescript": "~2.13.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
+    "open": "0.0.5",
+    "rimraf": "^2.5.2",
+    "run-sequence": "^1.1.0",
+    "serve-static": "^1.11.1",
     "systemjs-builder": "^0.15.23",
-    "typescript": "1.8.10"
+    "ts-node": "^0.9.3",
+    "typescript": "1.8.10",
+    "yargs": "^4.2.0"
   },
   "jspm": {
     "dependencies": {
